# tauri-taskify

./: README.md  package.json
src/: App.tsx  model.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs
src/backend/: api.ts
src/backend/models/: Todo.ts
src/components/: InputField.tsx  SingleTodo.tsx  TodoList.tsx  styles.css
