[package]
name = "taskify-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["ssnover"]
license = ""
repository = ""
default-run = "taskify-tauri"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
ts-rs = "7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
